// Vitest Snapshot v1

exports[`createCommendList > createCommendList 1`] = `
[
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:cjs",
    "ROLLUP_BUILD_PROD:true",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.cjs.prod.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:true",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:esm",
    "ROLLUP_BUILD_PROD:true",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.esm.prod.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:true",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:iife",
    "ROLLUP_BUILD_PROD:true",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.iife.prod.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:true",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:cjs",
    "ROLLUP_BUILD_PROD:false",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.cjs.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:true",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:esm",
    "ROLLUP_BUILD_PROD:false",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.esm.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:true",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:iife",
    "ROLLUP_BUILD_PROD:false",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.iife.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:true",
  ],
]
`;

exports[`createCommendList > createCommendList 2`] = `
[
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:cjs",
    "ROLLUP_BUILD_PROD:true",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.cjs.prod.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:false",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:esm",
    "ROLLUP_BUILD_PROD:true",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.esm.prod.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:false",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:iife",
    "ROLLUP_BUILD_PROD:true",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.iife.prod.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:false",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:cjs",
    "ROLLUP_BUILD_PROD:false",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.cjs.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:false",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:esm",
    "ROLLUP_BUILD_PROD:false",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.esm.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:false",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:iife",
    "ROLLUP_BUILD_PROD:false",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.iife.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:false",
  ],
]
`;

exports[`createCommendList > createCommendList 3`] = `
[
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:cjs",
    "ROLLUP_BUILD_PROD:true",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.cjs.prod.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:true",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:esm",
    "ROLLUP_BUILD_PROD:true",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.esm.prod.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:true",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:iife",
    "ROLLUP_BUILD_PROD:true",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.iife.prod.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:true",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:cjs",
    "ROLLUP_BUILD_PROD:false",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.cjs.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:true",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:esm",
    "ROLLUP_BUILD_PROD:false",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.esm.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:true",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:iife",
    "ROLLUP_BUILD_PROD:false",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.iife.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:true",
  ],
]
`;

exports[`createCommendList > createCommendList 4`] = `
[
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:cjs",
    "ROLLUP_BUILD_PROD:true",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.cjs.prod.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:false",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:esm",
    "ROLLUP_BUILD_PROD:true",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.esm.prod.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:false",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:iife",
    "ROLLUP_BUILD_PROD:true",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.iife.prod.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:false",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:cjs",
    "ROLLUP_BUILD_PROD:false",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.cjs.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:false",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:esm",
    "ROLLUP_BUILD_PROD:false",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.esm.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:false",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:iife",
    "ROLLUP_BUILD_PROD:false",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.iife.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:false",
  ],
]
`;

exports[`createCommendList > createCommendList4 1`] = `
[
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:cjs",
    "ROLLUP_BUILD_PROD:true",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.cjs.prod.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:false",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:esm",
    "ROLLUP_BUILD_PROD:true",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.esm.prod.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:false",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:iife",
    "ROLLUP_BUILD_PROD:true",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.iife.prod.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:false",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:cjs",
    "ROLLUP_BUILD_PROD:false",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.cjs.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:false",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:esm",
    "ROLLUP_BUILD_PROD:false",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.esm.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:false",
  ],
  [
    "ROLLUP_BUILD_INPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\src\\\\index.ts",
    "ROLLUP_BUILD_FORMAT:iife",
    "ROLLUP_BUILD_PROD:false",
    "ROLLUP_BUILD_OUTPUT:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor\\\\dist\\\\dist.iife.js",
    "ROLLUP_BUILD_NAME:Dist",
    "ROLLUP_BUILD_PACKAGE_PATH:R:\\\\Users\\\\meke\\\\Documents\\\\study\\\\mini\\\\vue-vapor",
    "ROLLUP_BUILD_DECLARATION:false",
  ],
]
`;
